src/objects/Commercial_Entitlement__c.object
<CustomObject>
    <description>Object to store commercial entitlements for customers.</description>
    <fields>
        <fullName>Activated_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Activated Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorised_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Authorised Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>Authorised_Quantity__c - Consumed_Quantity__c - Non_Consumed_Quantity__c</formula>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumed_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consumed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entitlement_Category__c</fullName>
        <label>Entitlement Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Entitlement</fullName>
                    <default>true</default>
                    <label>Commercial Entitlement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entitlement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Features</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Consumed_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non Consumed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Entitlements</relationshipLabel>
        <relationshipName>Commercial_Entitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pending_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pending Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product_Name__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Commercial Entitlements</relationshipLabel>
        <relationshipName>Commercial_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTO_End_User_SAP_ID__c</fullName>
        <formula>QTO_End_User__r.NCP_P20_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Entitlements (End User)</relationshipLabel>
        <relationshipName>Commercial_Entitlements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_Importer_of_Record_SAP_ID__c</fullName>
        <formula>QTO_Importer_of_Record__r.NCP_P20_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importer of Record SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Importer_of_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Importer of Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Entitlements (Importer of Record)</relationshipLabel>
        <relationshipName>Commercial_Entitlements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_Send_to_SWMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to SWMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Account_Name__c</fullName>
        <formula>Sold_To_Party__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Account_Number__c</fullName>
        <formula>Sold_To_Party__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_City__c</fullName>
        <formula>Sold_To_Party__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_Country_Code__c</fullName>
        <formula>Text(Sold_To_Party__r.BillingCountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_Country__c</fullName>
        <formula>Sold_To_Party__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_Postal_Code__c</fullName>
        <formula>Sold_To_Party__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_State__c</fullName>
        <formula>Sold_To_Party__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_Party_Street__c</fullName>
        <formula>Sold_To_Party__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Party Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sold_To_SAP_ID__c</fullName>
        <formula>Sold_To_Party__r.NCP_P20_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold To Party</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Entitlements (Sold To Party)</relationshipLabel>
        <relationshipName>Commercial_Entitlements1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Authorised_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Temp Authorised Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Consumed_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Temp Consumed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commercial Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Technology__c</columns>
        <columns>Use_Case__c</columns>
        <columns>Authorised_Quantity__c</columns>
        <columns>Consumed_Quantity__c</columns>
        <columns>Activated_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Sold_To_Party__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>QTO_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Commercial Entitlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Entitlements</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Entitlement</fullName>
        <active>true</active>
        <label>Commercial Entitlement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>